--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "beyondcode/laravel-comments",
+    "name": "furkankadioglu/laravel-comments",
     "description": "Add comments to your Laravel application",
     "keywords": [
         "beyondcode",
         "comments",
         "laravel-comments"
     ],
-    "homepage": "https://github.com/beyondcode/laravel-comments",
+    "homepage": "https://github.com/furkankadioglu/laravel-comments",
     "license": "MIT",
     "authors": [
         {
@@ -17,8 +17,8 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "~5.6.0|~5.7.0|~5.8.0"
+        "php": ">=7.0.0",
+        "illuminate/support": "5.5.*"
     },
     "require-dev": {
         "orchestra/testbench": "^3.6",
